--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@vkontakte/icons": "2.1.1",
     "@vkontakte/vk-bridge": "2.7.2",
     "@vkontakte/vkui": "4.40.0",
+    "cross-env": "^7.0.3",
     "mini-css-extract-plugin": "2.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.5",
     "react-scripts": "5.0.1",
+    "use-react-router-breadcrumbs": "^4.0.1",
     "web-vitals": "2.1.4",
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1"
