--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.5",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.5.4",
     "use-react-router-breadcrumbs": "4.0.1",
     "web-vitals": "2.1.4",
     "webpack": "5.75.0",
